<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="16dp"
    android:id="@+id/welcomeScreen"
    tools:context=".Controller.WelcomeScreenActivity">
    <Spinner
        android:id="@+id/languagespinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/language_arrays"
        android:prompt="@string/language_prompt" />

    <Button
        android:id="@+id/guestLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guest" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="214dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/image_donation" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:background="@color/colorAccent"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="#FFFFFF"
        android:text="@string/register" />
</LinearLayout>