...
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="loginErrorM">Invalid email/password</string>
    <string name="lockout">You are locked out for too many tries</string>
    <string name="registerErrorM">Email and password are required.</string>
    <string name="registerExistingUserErrorM">User already exists.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="altLogin">Log in using Google or Facebook</string>
...
